@@ -11,6 +11,8 @@ import org.elasticsearch.ElasticsearchStatusException;
 import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.index.query.MatchAllQueryBuilder;
+import org.elasticsearch.index.query.MatchNoneQueryBuilder;
 import org.elasticsearch.script.ScriptEngine;
 import org.elasticsearch.script.ScriptModule;
 import org.elasticsearch.script.ScriptService;
@@ -31,11 +33,13 @@ import org.elasticsearch.xpack.ml.inference.loadingservice.ModelLoadingService;
 import org.elasticsearch.xpack.ml.inference.persistence.TrainedModelProvider;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static org.elasticsearch.script.Script.DEFAULT_TEMPLATE_LANG;
+import static org.hamcrest.Matchers.hasKey;
 import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
@@ -48,7 +52,6 @@ import static org.mockito.Mockito.verify;
 public class LearnToRankServiceTests extends ESTestCase {
     public static final String GOOD_MODEL = "modelId";
     public static final String BAD_MODEL = "badModel";
-    public static final String TEMPLATED_GOOD_MODEL = "templatedModelId";
     public static final TrainedModelConfig GOOD_MODEL_CONFIG = TrainedModelConfig.builder()
         .setModelId(GOOD_MODEL)
         .setInput(new TrainedModelInput(List.of("field1", "field2")))
@@ -59,9 +62,10 @@ public class LearnToRankServiceTests extends ESTestCase {
             new LearnToRankConfig(
                 2,
                 List.of(
-                    new QueryExtractorBuilder("feature_1", QueryProviderTests.createRandomValidQueryProvider("field_1", "foo")),
-                    new QueryExtractorBuilder("feature_2", QueryProviderTests.createRandomValidQueryProvider("field_2", "bar"))
-                )
+                    new QueryExtractorBuilder("feature_1", QueryProviderTests.createTestQueryProvider("field_1", "foo")),
+                    new QueryExtractorBuilder("feature_2", QueryProviderTests.createTestQueryProvider("field_2", "bar"))
+                ),
+                Map.of()
             )
         )
         .build();
@@ -74,89 +78,102 @@ public class LearnToRankServiceTests extends ESTestCase {
         .setInferenceConfig(new RegressionConfig(null, null))
         .build();
 
-    public static final TrainedModelConfig TEMPLATED_GOOD_MODEL_CONFIG = new TrainedModelConfig.Builder(GOOD_MODEL_CONFIG).setModelId(
-        TEMPLATED_GOOD_MODEL
-    )
-        .setInferenceConfig(
-            new LearnToRankConfig(
-                2,
-                List.of(
-                    new QueryExtractorBuilder("feature_1", QueryProviderTests.createRandomValidQueryProvider("field_1", "{{foo_param}}")),
-                    new QueryExtractorBuilder("feature_2", QueryProviderTests.createRandomValidQueryProvider("field_2", "{{bar_param}}"))
-                )
-            )
-        )
-        .build();
-
     @SuppressWarnings("unchecked")
     public void testLoadLearnToRankConfig() throws Exception {
-        LearnToRankService learnToRankService = new LearnToRankService(
-            mockModelLoadingService(),
-            mockTrainedModelProvider(),
-            mockScriptService(),
-            xContentRegistry()
-        );
+        LearnToRankService learnToRankService = getTestLearnToRankService();
         ActionListener<LearnToRankConfig> listener = mock(ActionListener.class);
-        learnToRankService.loadLearnToRankConfig(GOOD_MODEL, Collections.emptyMap(), listener);
-        assertBusy(() -> verify(listener).onResponse(eq((LearnToRankConfig) GOOD_MODEL_CONFIG.getInferenceConfig())));
+        learnToRankService.loadLearnToRankConfig(GOOD_MODEL, Map.of(), listener);
+
+        verify(listener).onResponse(eq((LearnToRankConfig) GOOD_MODEL_CONFIG.getInferenceConfig()));
     }
 
     @SuppressWarnings("unchecked")
     public void testLoadMissingLearnToRankConfig() throws Exception {
-        LearnToRankService learnToRankService = new LearnToRankService(
-            mockModelLoadingService(),
-            mockTrainedModelProvider(),
-            mockScriptService(),
-            xContentRegistry()
-        );
+        LearnToRankService learnToRankService = getTestLearnToRankService();
         ActionListener<LearnToRankConfig> listener = mock(ActionListener.class);
-        learnToRankService.loadLearnToRankConfig("non-existing-model", Collections.emptyMap(), listener);
-        assertBusy(() -> verify(listener).onFailure(isA(ResourceNotFoundException.class)));
+        learnToRankService.loadLearnToRankConfig("non-existing-model", Map.of(), listener);
+
+        verify(listener).onFailure(isA(ResourceNotFoundException.class));
     }
 
     @SuppressWarnings("unchecked")
     public void testLoadBadLearnToRankConfig() throws Exception {
-        LearnToRankService learnToRankService = new LearnToRankService(
-            mockModelLoadingService(),
-            mockTrainedModelProvider(),
-            mockScriptService(),
-            xContentRegistry()
-        );
+        LearnToRankService learnToRankService = getTestLearnToRankService();
         ActionListener<LearnToRankConfig> listener = mock(ActionListener.class);
-        learnToRankService.loadLearnToRankConfig(BAD_MODEL, Collections.emptyMap(), listener);
-        assertBusy(() -> verify(listener).onFailure(isA(ElasticsearchStatusException.class)));
+        learnToRankService.loadLearnToRankConfig(BAD_MODEL, Map.of(), listener);
+
+        verify(listener).onFailure(isA(ElasticsearchStatusException.class));
     }
 
     @SuppressWarnings("unchecked")
     public void testLoadLearnToRankConfigWithTemplate() throws Exception {
-        LearnToRankService learnToRankService = new LearnToRankService(
-            mockModelLoadingService(),
-            mockTrainedModelProvider(),
-            mockScriptService(),
-            xContentRegistry()
+        LearnToRankConfig learnToRankConfig = new LearnToRankConfig(
+            0,
+            List.of(new QueryExtractorBuilder("feature_1", QueryProviderTests.createTestQueryProvider("field_1", "{{foo_param}}"))),
+            Map.of()
         );
 
-        // When no parameters are provided we expect the templated queries not being part of the retrieved config.
-        ActionListener<LearnToRankConfig> noParamsListener = mock(ActionListener.class);
-        learnToRankService.loadLearnToRankConfig(TEMPLATED_GOOD_MODEL, Collections.emptyMap(), noParamsListener);
-        assertBusy(() -> verify(noParamsListener).onResponse(argThat(retrievedConfig -> {
-            assertThat(retrievedConfig.getFeatureExtractorBuilders(), hasSize(2));
-            assertEquals(retrievedConfig, TEMPLATED_GOOD_MODEL_CONFIG.getInferenceConfig());
-            return true;
-        })));
+        LearnToRankService learnToRankService = getTestLearnToRankService(learnToRankConfig);
+        ActionListener<LearnToRankConfig> listener = mock(ActionListener.class);
 
-        // Now testing when providing all the params of the template.
-        ActionListener<LearnToRankConfig> allParamsListener = mock(ActionListener.class);
-        learnToRankService.loadLearnToRankConfig(
-            TEMPLATED_GOOD_MODEL,
-            Map.ofEntries(Map.entry("foo_param", "foo"), Map.entry("bar_param", "bar")),
-            allParamsListener
-        );
-        assertBusy(() -> verify(allParamsListener).onResponse(argThat(retrievedConfig -> {
-            assertThat(retrievedConfig.getFeatureExtractorBuilders(), hasSize(2));
-            assertEquals(retrievedConfig, GOOD_MODEL_CONFIG.getInferenceConfig());
+        learnToRankService.loadLearnToRankConfig("model-id", Map.ofEntries(Map.entry("foo_param", "foo")), listener);
+        verify(listener).onResponse(argThat(retrievedConfig -> {
+            assertThat(retrievedConfig.getFeatureExtractorBuilders(), hasSize(1));
+            QueryExtractorBuilder queryExtractorBuilder = retrievedConfig.getQueryFeatureExtractorBuilders().get(0);
+            assertEquals(queryExtractorBuilder.featureName(), "feature_1");
+            assertEquals(queryExtractorBuilder.query(), QueryProviderTests.createTestQueryProvider("field_1", "foo"));
             return true;
-        })));
+        }));
+    }
+
+    @SuppressWarnings("unchecked")
+    public void testLoadLearnToRankConfigWithMissingTemplateParams() throws Exception {
+        LearnToRankConfig learnToRankConfig = new LearnToRankConfig(
+            0,
+            List.of(
+                new QueryExtractorBuilder("feature_1", QueryProviderTests.createTestQueryProvider("field_1", "foo")),
+                new QueryExtractorBuilder("feature_2", QueryProviderTests.createTestQueryProvider("field_1", "{{foo_param}}")),
+                new QueryExtractorBuilder("feature_3", QueryProviderTests.createTestQueryProvider("field_1", "{{bar_param}}"), 1.5f),
+                new QueryExtractorBuilder("feature_4", QueryProviderTests.createTestQueryProvider("field_1", "{{baz_param}}"))
+            ),
+            Map.of("baz_param", "default_value")
+        );
+
+        LearnToRankService learnToRankService = getTestLearnToRankService(learnToRankConfig);
+        ActionListener<LearnToRankConfig> listener = mock(ActionListener.class);
+
+        learnToRankService.loadLearnToRankConfig("model-id", randomBoolean() ? null : Map.of(), listener);
+        verify(listener).onResponse(argThat(retrievedConfig -> {
+            // Check all features are present.
+            assertThat(retrievedConfig.getFeatureExtractorBuilders(), hasSize(4));
+
+            Map<String, QueryExtractorBuilder> queryExtractorBuilders = retrievedConfig.getQueryFeatureExtractorBuilders()
+                .stream()
+                .collect(Collectors.toMap(QueryExtractorBuilder::featureName, Function.identity()));
+
+            // feature_1 will be extracted using the provided query since no params are missing for it
+            assertThat(queryExtractorBuilders, hasKey("feature_1"));
+            assertEquals(queryExtractorBuilders.get("feature_1").query(), QueryProviderTests.createTestQueryProvider("field_1", "foo"));
+
+            // feature_2 will be extracted using a match_none query because {{foo_params}} is missing
+            assertThat(queryExtractorBuilders, hasKey("feature_2"));
+            assertEquals(queryExtractorBuilders.get("feature_2").query().getParsedQuery(), new MatchNoneQueryBuilder());
+
+            // feature_3 will be extracted using a match_all query with a boost because:
+            // - {{bar_param}} is missing
+            // - a default_score is provided for the query extractor
+            assertThat(queryExtractorBuilders, hasKey("feature_3"));
+            assertEquals(queryExtractorBuilders.get("feature_3").query().getParsedQuery(), new MatchAllQueryBuilder().boost(1.5f));
+
+            // feature_4 will be extracted using the default value for the {{baz_param}}
+            assertThat(queryExtractorBuilders, hasKey("feature_4"));
+            assertEquals(
+                queryExtractorBuilders.get("feature_4").query(),
+                QueryProviderTests.createTestQueryProvider("field_1", "default_value")
+            );
+
+            return true;
+        }));
     }
 
     @Override
@@ -164,7 +181,7 @@ public class LearnToRankServiceTests extends ESTestCase {
         List<NamedXContentRegistry.Entry> namedXContent = new ArrayList<>();
         namedXContent.addAll(new MlInferenceNamedXContentProvider().getNamedXContentParsers());
         namedXContent.addAll(new MlLTRNamedXContentProvider().getNamedXContentParsers());
-        namedXContent.addAll(new SearchModule(Settings.EMPTY, Collections.emptyList()).getNamedXContents());
+        namedXContent.addAll(new SearchModule(Settings.EMPTY, List.of()).getNamedXContents());
         return new NamedXContentRegistry(namedXContent);
     }
 
@@ -181,7 +198,6 @@ public class LearnToRankServiceTests extends ESTestCase {
             ActionListener<TrainedModelConfig> l = invocation.getArgument(3, ActionListener.class);
             switch (modelId) {
                 case GOOD_MODEL -> l.onResponse(GOOD_MODEL_CONFIG);
-                case TEMPLATED_GOOD_MODEL -> l.onResponse(TEMPLATED_GOOD_MODEL_CONFIG);
                 case BAD_MODEL -> l.onResponse(BAD_MODEL_CONFIG);
                 default -> l.onFailure(new ResourceNotFoundException("missing model"));
             }
@@ -192,7 +208,40 @@ public class LearnToRankServiceTests extends ESTestCase {
         return trainedModelProvider;
     }
 
-    private ScriptService mockScriptService() {
+    private LearnToRankService getTestLearnToRankService() {
+        return getTestLearnToRankService(mockTrainedModelProvider());
+    }
+
+    @SuppressWarnings("unchecked")
+    private LearnToRankService getTestLearnToRankService(LearnToRankConfig learnToRankConfig) {
+        TrainedModelProvider trainedModelProvider = mock(TrainedModelProvider.class);
+
+        doAnswer(invocation -> {
+            String modelId = invocation.getArgument(0);
+            ActionListener<TrainedModelConfig> l = invocation.getArgument(3, ActionListener.class);
+
+            l.onResponse(
+                TrainedModelConfig.builder()
+                    .setModelId(modelId)
+                    .setInput(new TrainedModelInput(List.of("field1", "field2")))
+                    .setEstimatedOperations(1)
+                    .setModelSize(2)
+                    .setModelType(TrainedModelType.TREE_ENSEMBLE)
+                    .setInferenceConfig(learnToRankConfig)
+                    .build()
+            );
+            return null;
+
+        }).when(trainedModelProvider).getTrainedModel(any(), any(), any(), any());
+
+        return getTestLearnToRankService(trainedModelProvider);
+    }
+
+    private LearnToRankService getTestLearnToRankService(TrainedModelProvider trainedModelProvider) {
+        return new LearnToRankService(mockModelLoadingService(), trainedModelProvider, getTestScriptService(), xContentRegistry());
+    }
+
+    private ScriptService getTestScriptService() {
         ScriptEngine scriptEngine = new MustacheScriptEngine();
         return new ScriptService(Settings.EMPTY, Map.of(DEFAULT_TEMPLATE_LANG, scriptEngine), ScriptModule.CORE_CONTEXTS, () -> 1L);
     }
